--- a/configuration/experiment_runs1.yml
+++ b/configuration/experiment_runs1.yml
@@ -1,56 +1,38 @@
-- dataset: creditcard
-  model: node
+- dataset: iris
+  model: resnet
   best_params: {}
   param_grid:
     outer_params: &id001
       hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
       max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
+      early_stopping: true
+      early_stopping_patience: 10
+      validation_fraction: 0.15
     batch_size: &id002
-    - 512
-    - 1024
-    num_layers: &id003
-    - 1
-    - 2
-    - 3
-    num_trees: &id004
-    - 12
+    - 32
+    - 64
     - 128
-    additional_tree_output_dim: &id005
-    - 2
-    - 3
-    - 4
-    depth: &id006
-    - 5
-    - 7
-    choice_function: &id007
-    - entmax15
-    - sparsemax
-    bin_function: &id008
-    - entmoid15
-    - sparsemoid
-    input_dropout: &id009
-    - 0.0
-    - 0.1
-    embedding_dropout: &id010
-    - 0.0
-    - 0.1
-    embed_categorical: &id011
-    - true
-    - false
-    optimizer_fn: &id012
+    - 256
+    resnet_depth: &id003
+    - resnet18
+    - resnet34
+    - resnet50
+    optimizer_fn: &id004
       Adam:
         weight_decay:
-        - 0.0001
         - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
       AdamW:
         weight_decay:
-        - 0.0001
         - 1.0e-05
-    scheduler_fn: &id013
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+    scheduler_fn: &id005
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -62,89 +44,290 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: covertype
-  model: node
+- dataset: breastcancer
+  model: resnet
   best_params: {}
   param_grid:
     outer_params: *id001
     batch_size: *id002
-    num_layers: *id003
-    num_trees: *id004
-    additional_tree_output_dim: *id005
-    depth: *id006
-    choice_function: *id007
-    bin_function: *id008
-    input_dropout: *id009
-    embedding_dropout: *id010
-    embed_categorical: *id011
-    optimizer_fn: *id012
-    scheduler_fn: *id013
-- dataset: creditcard
-  model: autoint
+    resnet_depth: *id003
+    optimizer_fn: *id004
+    scheduler_fn: *id005
+- dataset: titanic
+  model: resnet
   best_params: {}
   param_grid:
-    outer_params: &id014
+    outer_params: *id001
+    batch_size: *id002
+    resnet_depth: *id003
+    optimizer_fn: *id004
+    scheduler_fn: *id005
+- dataset: ageconditions
+  model: resnet
+  best_params: {}
+  param_grid:
+    outer_params: *id001
+    batch_size: *id002
+    resnet_depth: *id003
+    optimizer_fn: *id004
+    scheduler_fn: *id005
+- dataset: breastcancer
+  model: tabnet
+  best_params: {}
+  param_grid:
+    outer_params: &id006
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 10
+    virtual_batch_size_ratio: &id007
+    - 0.125
+    - 0.25
+    - 0.5
+    - 1.0
+    batch_size: &id008
+    - 128
+    - 256
+    weights: &id009
+    - 0
+    - 1
+    mask_type: &id010
+    - sparsemax
+    - entmax
+    n_d: &id011
+    - 6
+    - 32
+    n_steps: &id012
+    - 1
+    - 6
+    gamma: &id013
+    - 1.0
+    - 2.0
+    n_independent: &id014
+    - 1
+    - 3
+    n_shared: &id015
+    - 1
+    - 3
+    optimizer_fn: &id016
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn: &id017
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: ageconditions
+  model: tabnet
+  best_params: {}
+  param_grid:
+    outer_params: *id006
+    virtual_batch_size_ratio: *id007
+    batch_size: *id008
+    weights: *id009
+    mask_type: *id010
+    n_d: *id011
+    n_steps: *id012
+    gamma: *id013
+    n_independent: *id014
+    n_shared: *id015
+    optimizer_fn: *id016
+    scheduler_fn: *id017
+- dataset: adult
+  model: mlp
+  best_params: {}
+  param_grid:
+    outer_params:
+      cv_iterations: 10
+      early_stopping: true
+      cv_size: 5
+      validation_fraction: 0.15
+      hyperopt_evals: 50
+      n_iter_no_change: 30
+      max_iter: 1000
+    hidden_layer_sizes:
+    - - 64
+      - 32
+      - 16
+    - - 256
+      - 128
+      - 64
+      - 32
+    - - 128
+      - 64
+      - 32
+      - 16
+    activation:
+    - relu
+    - tanh
+    - logistic
+    solver:
+    - adam
+    - lbfgs
+    alpha:
+    - 0.0001
+    - 0.001
+    - 0.01
+    learning_rate_init:
+    - 0.0001
+    - 0.01
+    - 0.1
+    beta_1:
+    - 0.99
+    - 0.8
+    beta_2:
+    - 0.999
+    - 0.9
+    batch_size:
+    - 512
+    - 1024
+    - 2048
+- dataset: adult
+  model: resnet
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      max_epochs: 1000
+      early_stopping: true
+      early_stopping_patience: 6
+      validation_fraction: 0.15
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    resnet_depth:
+    - resnet18
+    - resnet34
+    - resnet50
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+      AdamW:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: adult
+  model: s1dcnn
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      max_epochs: 1000
+      early_stopping: true
+      shuffle: true
+      validation_fraction: 0.15
+      early_stopping_patience: 6
+    batch_size:
+    - 1024
+    - 4096
+    hidden_size:
+    - 2048
+    - 4096
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.01
+      AdamW:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.01
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: adult
+  model: tabnet
+  best_params: {}
+  param_grid:
+    outer_params:
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
-    batch_size: &id015
+    virtual_batch_size_ratio:
+    - 0.125
+    - 0.25
+    - 0.5
+    - 1.0
+    batch_size:
     - 1024
     - 2048
     - 4096
-    attn_embed_dim_multiplier: &id016
-    - 2
-    - 16
-    num_heads: &id017
-    - 2
-    - 8
-    num_attn_blocks: &id018
-    - 2
+    weights:
+    - 0
+    - 1
+    mask_type:
+    - sparsemax
+    - entmax
+    n_d:
     - 6
-    attn_dropouts: &id019
-    - 0.0
-    - 0.3
-    embedding_dim: &id020
-    - 8
     - 32
-    embedding_initialization: &id021
-    - kaiming_uniform
-    - kaiming_normal
-    embedding_bias: &id022
-    - true
-    - false
-    share_embedding: &id023
-    - true
-    - false
-    share_embedding_strategy: &id024
-    - add
-    - fraction
-    shared_embedding_fraction: &id025
-    - 0.25
-    - 0.1
-    - 0.5
-    deep_layers: &id026
-    - true
-    - false
-    layers: &id027
-    - 128-64-32
-    - 128-64-32-16
-    - 256-128-64
-    dropout: &id028
-    - 0.0
-    - 0.3
-    activation: &id029
-    - ReLU
-    - LeakyReLU
-    initialization: &id030
-    - kaiming
-    - xavier
-    attention_pooling: &id031
-    - true
-    - false
-    optimizer_fn: &id032
+    n_steps:
+    - 1
+    - 6
+    gamma:
+    - 1.0
+    - 2.0
+    n_independent:
+    - 1
+    - 3
+    n_shared:
+    - 1
+    - 3
+    optimizer_fn:
       Adam:
         weight_decay:
         - 0.0001
@@ -153,7 +336,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn: &id033
+    scheduler_fn:
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -165,27 +348,328 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: covertype
-  model: autoint
+- dataset: adult
+  model: gate
   best_params: {}
   param_grid:
-    outer_params: *id014
-    batch_size: *id015
-    attn_embed_dim_multiplier: *id016
-    num_heads: *id017
-    num_attn_blocks: *id018
-    attn_dropouts: *id019
-    embedding_dim: *id020
-    embedding_initialization: *id021
-    embedding_bias: *id022
-    share_embedding: *id023
-    share_embedding_strategy: *id024
-    shared_embedding_fraction: *id025
-    deep_layers: *id026
-    layers: *id027
-    dropout: *id028
-    activation: *id029
-    initialization: *id030
-    attention_pooling: *id031
-    optimizer_fn: *id032
-    scheduler_fn: *id033
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    tree_depth:
+    - 4
+    - 6
+    num_trees:
+    - 4
+    - 8
+    chain_trees:
+    - false
+    - true
+    gflu_stages:
+    - 3
+    - 8
+    gflu_dropout:
+    - 0.0
+    - 0.05
+    tree_dropout:
+    - 0.0
+    - 0.05
+    tree_wise_attention_dropout:
+    - 0.0
+    - 0.05
+    embedding_dropout:
+    - 0
+    - 0.2
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: adult
+  model: fttransformer
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+      attn_feature_importance: false
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    num_heads:
+    - 4
+    - 10
+    input_embed_dim_multiplier:
+    - 2
+    - 6
+    embedding_initialization:
+    - kaiming_uniform
+    - kaiming_normal
+    embedding_dropout:
+    - 0.05
+    - 0.2
+    shared_embedding_fraction:
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks:
+    - 4
+    - 8
+    attn_dropout:
+    - 0.05
+    - 0.2
+    add_norm_dropout:
+    - 0.05
+    - 0.2
+    ff_dropout:
+    - 0.05
+    - 0.2
+    ff_hidden_multiplier:
+    - 4
+    - 32
+    transformer_activation:
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: adult
+  model: categoryembedding
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    layers:
+    - 128-64-32
+    - 100-50-24
+    - 128-64-32-16
+    - 256-128-64
+    activation:
+    - ReLU
+    - LeakyReLU
+    initialization:
+    - kaiming
+    - xavier
+    dropout:
+    - 0.0
+    - 0.3
+    embedding_dropout:
+    - 0.0
+    - 0.3
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: adult
+  model: gandalf
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    gflu_stages:
+    - 4
+    - 10
+    gflu_dropout:
+    - 0.0
+    - 0.3
+    embedding_dropout:
+    - 0.0
+    - 0.3
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: adult
+  model: tabtransformer
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    embedding_bias:
+    - true
+    - false
+    embedding_initialization:
+    - kaiming_uniform
+    - kaiming_normal
+    shared_embedding_fraction:
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks:
+    - 4
+    - 10
+    attn_dropout:
+    - 0.05
+    - 0.3
+    add_norm_dropout:
+    - 0.05
+    - 0.3
+    ff_dropout:
+    - 0.05
+    - 0.3
+    ff_hidden_multiplier:
+    - 2
+    - 6
+    transformer_activation:
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    embedding_dropout:
+    - 0.05
+    - 0.3
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: adult
+  model: catboost
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      validation_fraction: 0.15
+      early_stopping_rounds: 50
+      verbose: false
+    iterations:
+    - 200
+    - 3000
+    learning_rate:
+    - 0.001
+    - 0.1
+    depth:
+    - 4
+    - 10
+    l2_leaf_reg:
+    - 0.5
+    - 5.0
+    min_child_samples:
+    - 1
+    - 100
+    bagging_temperature:
+    - 0.1
+    - 2.0
