--- a/configuration/experiment_runs1.yml
+++ b/configuration/experiment_runs1.yml
@@ -1,117 +1,45 @@
-- dataset: iris
-  model: resnet
+- dataset: breastcancer
+  model: tabnet
   best_params: {}
   param_grid:
     outer_params: &id001
       hyperopt_evals: 50
-      max_epochs: 1000
-      early_stopping: true
-      early_stopping_patience: 10
-      validation_fraction: 0.15
-    batch_size: &id002
-    - 32
-    - 64
-    - 128
-    - 256
-    resnet_depth: &id003
-    - resnet18
-    - resnet34
-    - resnet50
-    optimizer_fn: &id004
-      Adam:
-        weight_decay:
-        - 1.0e-05
-        - 0.001
-        learning_rate:
-        - 0.0001
-        - 0.001
-      AdamW:
-        weight_decay:
-        - 1.0e-05
-        - 0.001
-        learning_rate:
-        - 0.0001
-        - 0.001
-    scheduler_fn: &id005
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: breastcancer
-  model: resnet
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    batch_size: *id002
-    resnet_depth: *id003
-    optimizer_fn: *id004
-    scheduler_fn: *id005
-- dataset: titanic
-  model: resnet
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    batch_size: *id002
-    resnet_depth: *id003
-    optimizer_fn: *id004
-    scheduler_fn: *id005
-- dataset: ageconditions
-  model: resnet
-  best_params: {}
-  param_grid:
-    outer_params: *id001
-    batch_size: *id002
-    resnet_depth: *id003
-    optimizer_fn: *id004
-    scheduler_fn: *id005
-- dataset: breastcancer
-  model: tabnet
-  best_params: {}
-  param_grid:
-    outer_params: &id006
-      hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
+      tol: 1.0e-05
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 10
-    virtual_batch_size_ratio: &id007
+    virtual_batch_size_ratio: &id002
     - 0.125
     - 0.25
     - 0.5
     - 1.0
-    batch_size: &id008
+    batch_size: &id003
     - 128
     - 256
-    weights: &id009
+    weights: &id004
     - 0
     - 1
-    mask_type: &id010
+    mask_type: &id005
     - sparsemax
     - entmax
-    n_d: &id011
+    n_d: &id006
     - 6
     - 32
-    n_steps: &id012
+    n_steps: &id007
     - 1
     - 6
-    gamma: &id013
+    gamma: &id008
     - 1.0
     - 2.0
-    n_independent: &id014
+    n_independent: &id009
     - 1
     - 3
-    n_shared: &id015
+    n_shared: &id010
     - 1
     - 3
-    optimizer_fn: &id016
+    optimizer_fn: &id011
       Adam:
         weight_decay:
         - 0.0001
@@ -120,7 +48,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn: &id017
+    scheduler_fn: &id012
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -136,18 +64,18 @@
   model: tabnet
   best_params: {}
   param_grid:
-    outer_params: *id006
-    virtual_batch_size_ratio: *id007
-    batch_size: *id008
-    weights: *id009
-    mask_type: *id010
-    n_d: *id011
-    n_steps: *id012
-    gamma: *id013
-    n_independent: *id014
-    n_shared: *id015
-    optimizer_fn: *id016
-    scheduler_fn: *id017
+    outer_params: *id001
+    virtual_batch_size_ratio: *id002
+    batch_size: *id003
+    weights: *id004
+    mask_type: *id005
+    n_d: *id006
+    n_steps: *id007
+    gamma: *id008
+    n_independent: *id009
+    n_shared: *id010
+    optimizer_fn: *id011
+    scheduler_fn: *id012
 - dataset: adult
   model: mlp
   best_params: {}
@@ -206,6 +134,7 @@
       max_epochs: 1000
       early_stopping: true
       early_stopping_patience: 6
+      tol: 1.0e-05
       validation_fraction: 0.15
     batch_size:
     - 1024
@@ -253,6 +182,7 @@
       shuffle: true
       validation_fraction: 0.15
       early_stopping_patience: 6
+      tol: 1.0e-05
     batch_size:
     - 1024
     - 4096
@@ -294,6 +224,7 @@
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
+      tol: 1.0e-05
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
@@ -356,6 +287,7 @@
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
+      tol: 1.0e-05
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
@@ -416,6 +348,7 @@
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
+      tol: 1.0e-05
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
@@ -488,6 +421,7 @@
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
+      tol: 1.0e-05
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
@@ -541,6 +475,7 @@
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
+      tol: 1.0e-05
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
@@ -586,6 +521,7 @@
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
+      tol: 1.0e-05
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
@@ -673,3 +609,68 @@
     bagging_temperature:
     - 0.1
     - 2.0
+- dataset: breastcancer
+  model: resnet
+  best_params: {}
+  param_grid:
+    outer_params: &id013
+      hyperopt_evals: 50
+      max_epochs: 1000
+      early_stopping: true
+      early_stopping_patience: 10
+      tol: 1.0e-05
+      validation_fraction: 0.15
+    batch_size: &id014
+    - 32
+    - 64
+    - 128
+    - 256
+    resnet_depth: &id015
+    - resnet18
+    - resnet34
+    - resnet50
+    optimizer_fn: &id016
+      Adam:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+      AdamW:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.001
+    scheduler_fn: &id017
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: titanic
+  model: resnet
+  best_params: {}
+  param_grid:
+    outer_params: *id013
+    batch_size: *id014
+    resnet_depth: *id015
+    optimizer_fn: *id016
+    scheduler_fn: *id017
+- dataset: ageconditions
+  model: resnet
+  best_params: {}
+  param_grid:
+    outer_params: *id013
+    batch_size: *id014
+    resnet_depth: *id015
+    optimizer_fn: *id016
+    scheduler_fn: *id017
